--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ html,body{
 
 #pbtm{
     display:flex ;
+    justify-content: center;
+    align-content: center;
     gap: 10px;
     flex-wrap: wrap;
     padding: 20px;
